--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -11,16 +11,16 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         id: preview_step
-        name: test afc163/surge-preview
+        name: test shidi/cloudflare-workers-preview
         with:
-          surge_token: ${{ secrets.SURGE_TOKEN }}
+          cf_token: ${{ secrets.CF_API_TOKEN }}
+          cf_account: ${{ secrets.CF_ACCOUNT_ID }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          domain: qvistn.workers.dev
           teardown: 'true'
-          dist: public/preview
+          project_path: preview/my-site
           build: |
-            mkdir -p public/preview
             npm install
-            npm run build-preview -- public/preview
       - name: Get the output url
         run: echo "url => ${{ steps.preview_step.outputs.preview_url }}"
   preview2:
@@ -29,15 +29,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         id: preview_action
-        name: test afc163/surge-preview
+        name: test shidi/cloudflare-workers-preview
         with:
-          surge_token: ${{ secrets.SURGE_TOKEN }}
+          cf_token: ${{ secrets.CF_API_TOKEN }}
+          cf_account: ${{ secrets.CF_ACCOUNT_ID }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          domain: qvistn.workers.dev
           teardown: 'true'
-          dist: public/preview2
+          project_path: preview/my-site
           build: |
-            mkdir -p public/preview2
             npm install
-            npm run build-preview -- public/preview2
       - name: Get the output url
         run: echo "url => ${{ steps.preview_action.outputs.preview_url }}"
